<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Labo 4</string>

    <string name="notes_list_title">My notes</string>

    <string name="notes_controls_counter_empty">No notes</string>
    <string name="notes_controls_counter">%d</string>
    <string name="notes_controls_action_generate">@string/action_generate</string>
    <string name="notes_controls_action_delete">Delete</string>

    <string name="note_view_item_description_icon">Item icon</string>
    <string name="note_view_item_description_schedule_icon">Schedule icon</string>

    <string name="note_view_item_schedule_late">Late</string>

    <string name="menu_filter_group_title">Filter</string>
    <string name="menu_filter_creation_date_title">Creation date</string>
    <string name="menu_filter_eta_title">ETA</string>

    <string name="menu_controls_action_generate">@string/action_generate</string>
    <string name="menu_controls_action_delete_all">Delete all</string>

    <string name="action_generate">Generate</string>

    <plurals name="note_view_item_schedule_schedule_month">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="note_view_item_schedule_schedule_week">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="note_view_item_schedule_schedule_day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="note_view_item_schedule_schedule_hour">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="note_view_item_schedule_schedule_minute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
</resources>