<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".fragments.NotesControlsFragment">

    <TextView
        android:id="@+id/notes_controls_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_controls_counter_empty"
        android:textSize="@dimen/large_title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/notes_controls_button_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/notes_controls_button_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_controls_action_generate"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/notes_controls_button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_controls_counter" />

    <Button
        android:id="@+id/notes_controls_button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_controls_action_delete"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_controls_button_generate" />
</androidx.constraintlayout.widget.ConstraintLayout>